if(WITH_CONVERTER)
    if(WITH_HDF5 AND WITH_BOOST)
        find_package(Boost 1.47 REQUIRED COMPONENTS program_options)
        message(STATUS "adding FORMAT CONVERTER")
        add_executable(legacy-format-converter converter.cxx ${headers})
        target_link_libraries(legacy-format-converter ${HDF5_CORE_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY})
        if(UNIX)
            find_library(RT rt)
            target_link_libraries(legacy-format-converter rt)
        endif(UNIX)
        INSTALL_TARGETS(/bin legacy-format-converter)
    else()
        message(STATUS "Not building format converter **")
    endif()
endif()
